fixing change visibility by display css property

--- a/src/app/project/project-card/project-card.component.css
+++ b/src/app/project/project-card/project-card.component.css
@@ -1,5 +1,5 @@
 .card-hover .reveal {
-    visibility: hidden;
+    display: none;
     opacity: 0;
     height: 0;
     padding: 0;
@@ -18,7 +18,7 @@
 
 .card-hover:hover .reveal {
     /* height: auto; */
-    visibility: visible;
+    display: inline-block;
     opacity: 10;
     transition: opacity 1s ease;
 }
@@ -32,13 +32,13 @@
   border-radius: 0;
   border-color: #bcbebc;
   transition: 200ms;
-  visibility: visible;
+  display: inline-block;
   opacity: 10;
   transition: opacity 1s ease;
 }
 
 .card-selected .reveal{
-    visibility: visible;
+    display: inline-block;
     opacity: 10;
     transition: opacity 1s ease;
 }
@@ -73,7 +73,7 @@
         transform: none !important;
     }
     .reveal{
-        visibility: visible !important;
+        display: inline-block !important;
         opacity: 1 !important;
         margin-top: -1rem;
     }
@@ -90,7 +90,7 @@
         transform: none !important;
     }
     .btn-icon-eye{
-        visibility: visible !important;
+        display: inline-block !important;
     }
     .project-title{
         font-size: 1rem;
@@ -107,12 +107,6 @@
         font-size: 0.6rem !important;
         padding-top: 0 !important;
     }
-    /* #applied-badge{
-        display:none !important;
-    }
-    #applied-min{
-        display: inline !important;
-    } */
     .project-title{
         font-size: 0.9rem;
     }
